@@ -1,3 +1,12 @@
+Fri Sep 17 12:49:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Containers/Container_Base.h:
+        * ciao/Containers/Container_Base.cpp:
+        * ciao/Containers/Session/Session_Container.h:
+        * ciao/Containers/Session/Session_Container.cpp:
+        * ciao/Deployment/Handlers/Container_Handler.cpp:
+          Removed constructor argument not used at all
+
 Fri Sep 17 08:46:57 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * tests/CIF/Common/CIF_Common.cpp:
